Final issue: game flow

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -63,6 +63,6 @@
         <footer>
             <div>2021 &copy; A Gurveer Singh Production</div>
         </footer>
-        <script src="../js/script.js" type="module"></script>
+        <!-- <script src="../js/script.js" type="module"></script> -->
     </body>
 </html>
