--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <section class="header"> 
-            <div id="title">Germany</div>
+            <div id="title">Breakout</div>
+            <!-- <a href="./instri"></a> -->
         </section>
         <section class="game">
             <!-- opponent final hand -->
